# ChangeLog for app-admin/logstash-forwarder
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*logstash-forwarder-0.4.0 (19 Mar 2015)

  19 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org>
  +logstash-forwarder-0.4.0.ebuild, +metadata.xml:
  Add initial ebuild.
