@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX logstash-forwarder.confd 46 SHA256 9facaebb72117a4ac2e24dbc8699c46cde41f579e58ad4da449745502f44a65f SHA512 fc74aa79b03eef36640324477d56988d5e180c865beda1b0b09c4e72f8dfc3fe9f8b0339713680108ff7b34cc666d309506ea5b1b43ffd13dbfcc0ed742fc769 WHIRLPOOL f3ed7420fc5849338a8273907cb3c0c9dba3029b2c2a0b3012f88b3f839aea7849384164866c4953c995e7bdbb1b05dc3f4923556da92f4c77f2f05090ae8f18
+AUX logstash-forwarder.initd 692 SHA256 8d7a2b283af133a03ff87577289f6deaf1997ec178eab437c1c3fd2582d0a0d5 SHA512 4fe063a54698f8b72b025f5f02ab79406f6d9d804e20c503b8e79566ee0dc2d53758a9e437affa418f16d5387d08fa046a7d94013bd4ae946890a6f81ceef756 WHIRLPOOL 09fcf62a84afb2c1e223065ed88b5e0147a4fc2c9a35f1fd4f74297105580c8bd8e44aac20d6cce7745bb0bfead46b72528e82d6e8976a45079598ddf629b46e
 DIST logstash-forwarder-0.4.0.tar.gz 35189 SHA256 d930cd33747b2826c7358238a25e690324751d1b098e7c00de1357944766b3c3 SHA512 1f89b065d1b26a6f5b18da6215bdaed5a312af12fa721835f5e1a77248dd67f398f5af08b5d93c0c4c5ef9623eb1ddb58449b52039c0db0241d5ca61872102ef WHIRLPOOL 7715c723f8b8712b5cccc1e678017b2d733f243ea936d312ab31938fba73934a66d552656516bc72b65a3541945401f99463d8346fdf6a00372e9b3a0ed67655
-EBUILD logstash-forwarder-0.4.0.ebuild 528 SHA256 fe3c1d697e297e887117c6cb751e19ae0b5593e2572356ac6a925c86546d8664 SHA512 5e4051bf46d577832119c47ddb9d8cb94719ec55f85da9811f8b21388924fdc8602d9e9e61ed37168d79c1d761caa9971c1852e0983a9cd5e0e71e5342f80fa4 WHIRLPOOL 828e644f7d0291880dda014dfc2867b32bfa5c21713e2799b929897984134ec16bd24b11014c4f83a9f751b1ac51415d19ce00c3b5aea416d5cce47a866589ee
-MISC ChangeLog 301 SHA256 67f8cfb43050773c13783350865706f4ae22b5d8cabcecd82c8a939a29d887a4 SHA512 dee40b52bb2dff0ab042801f71ad0ecdca213130b8302dfd10d285626cdeef05651615c29c9304a3e32d511f384f74cbd08ffce27b9ac3194c874e99032dd70e WHIRLPOOL 85f466baf0a9a9b2a9535c7d423a254031cb8ef1a13dac03211566f13d00c088a18d525beed1de88a126d7dfe107abcb67b4667edbe5dc0f7468035b402e8c2c
+EBUILD logstash-forwarder-0.4.0.ebuild 672 SHA256 b992182a66fc8266e690816f92ccbb71392a83c1f8c4a4b6d205fe41a51213f2 SHA512 b375430c9633a3075d285695eebe7d3537682d6025340f432073dd70e0ff49f31177ad070acf26a31c09569d4be7cf95195710d11c054588846d20756ada66d7 WHIRLPOOL 15604d7b250462a92ed272fecffb15641f4d85c75684c43f5da86f2ba70ebe5ac3c0de21e7e9cc39014dacf1b5a893240a66b36ac5f74817b00b99e608f44ca3
+MISC ChangeLog 528 SHA256 745116b932e1df35c30c31d9e5b4149bcdc7a3ca3e8f7a36d19e7fe1f478f5a6 SHA512 ba7f8893628c4f4c0663b740b30b6693929902226697f8ad7b09c2808eeb8eac11690433e928b767476443d30b809be40281a6b595dfb5b09106901221b187ff WHIRLPOOL aa5f0ad037cace65cebcefa147f1b486ec459e9c863c4dfa6e2b2ced1c477d97837dc9ddd94a57be3235278d4e91fb090ac8e6e8666e2178faf4a5287cf5d28b
 MISC metadata.xml 289 SHA256 e652ef5d8606fe2463e55d881e49c7cd277ec333fa8ee9b3fb441b8178a619ca SHA512 00334d716c23b339a22f7b2ac00daeac73f119ae4c25ddd9f67926b23c71b9aa7b3781f815a8461e269247e5046b421fc9a6b7ddc40592fda2b75bd460f8165b WHIRLPOOL b8794e463e60c64e2faa99655d53de2f73340b99a3040be95b88986287d2cca60c601df2dd5013e6b9751dc64d47cf1158c73cbb5c48e9090552be75cb4f59b5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVCt/oAAoJEPATRTHh2/q1z4YIAJg77ZriIFCGdfrBcxbLogyI
-FBfl+T7QBuCg11drasVCB6BLpCZFYubSVKBNBz/3jCKaOT5W85d7cQ/MWIlfoiqN
-SA7wW1PC9/WVPcaD6l449Hy5JfbKpxCoe9fvN9CRiFj5jU+GIswkPoiBO0yACLvB
-FYQxiIscVb6Rt2XD3rzEMLmkGu7nCwvp/OWm5f4Mm38PdHYeJXmZimf1ZmhOQ49h
-RT1KOzBsbn473Usizm9LepEnNxpv2Z8OT3Sl05cr/BLWNq4VVQuCszAhiDUKiKbx
-9/+nDmwVfyUrtjLrhTsCvciatYkpEcxQgcv7NG2u84ZL5rue5m4bXy3V+pxuUzA=
-=935F
+iQEcBAEBCAAGBQJVCykNAAoJEPATRTHh2/q1CtEH/jC7UM3Aq4BKOL2BZcdJFrZM
+6Gw9MoHiI+RltPjVtNU3ElQoEjRu67/k6PHaqiAWWcv0y78sgtVCRex7wu0HAZke
+PAaXeq7fCI7klR6zYQgaderx9H9Sbvr3uyKeS49Q/riXflZRj4ShOoUtqIBo/ivc
+XD4QeBQX+YYCJ1i+BjKLk3hp8pJEIL7aUbxOl4rllWx3+jpDNm9cmwtQ1ypaOJoH
+WHlV9T35k8tbvf5YCWW37uG4yvOl+2JbIz079ZlmOfrYQzRBQPnOmV7X8gVrq2Bu
+NaNmNGj7oWoZxqAYEkjpBHtk72HD9gIFqhS5tnMjJ0cqrp9Zr0JdT7MYIdT36K8=
+=go/p
 -----END PGP SIGNATURE-----
